fix(app): fix toolbar z-index

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -10,6 +10,7 @@
     height: 5rem;
     top: 0;
     left: 0;
+    z-index: 1;
   }
 
   > .outlet {
